Changed project structure

--- a/internal/web/index.tmpl
+++ b/internal/web/index.tmpl
@@ -5,10 +5,10 @@
     <ul class="p-5 grid gap-3">
       <li>Home</li>
       <li>
-        <a hx-get="/create-user" hx-target="#main-content">Create User</a>
+        <a hx-get="/create-user" hx-target="#main-content" class="cursor-pointer block">Create User</a>
       </li>
       <li>
-        <a hx-get="/edit-user" hx-target="#main-content">Edit User</a>
+        <a hx-get="/edit-user" hx-target="#main-content" class="cursor-pointer block">Edit User</a>
       </li>
     </ul>
   </div>
