changed from edit user to delete user, and add form for it

--- a/internal/web/index.tmpl
+++ b/internal/web/index.tmpl
@@ -8,7 +8,7 @@
         <a hx-get="/create-user" hx-target="#main-content" class="cursor-pointer block">Create User</a>
       </li>
       <li>
-        <a hx-get="/edit-user" hx-target="#main-content" class="cursor-pointer block">Edit User</a>
+        <a hx-get="/delete-user" hx-target="#main-content" class="cursor-pointer block">Delete User</a>
       </li>
     </ul>
   </div>
