--- a/internal/web/deleteUser.tmpl
+++ b/internal/web/deleteUser.tmpl
@@ -1,12 +1,9 @@
 <div>
-    <h1 class="text-2xl">Create User</h1>
+    <h1 class="text-2xl">Delete User</h1>
     <form class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2" hx-post="/create-user">
         <div class="grid grid-cols-2 gap-y-2">
             <label for="username" class="col-start-1">Username: </label>
             <input type="text" name="username" id="username" class="border border-slate-400 rounded" required>
-        
-            <label for="password" class="col-start-1">Password: </label>
-            <input type="text" name="password" id="password" class="border border-slate-400 rounded" required>
        
             <label for="wo" class="col-start-1">WO: </label>
             <input type="text" name="wo" id="wo" class="border border-slate-400 rounded" required>
