update dockerfile and dependencies

--- a/src/web/base.tmpl
+++ b/src/web/base.tmpl
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>DB PLatform</title>
   </head>
   <body>
     {{ end }} {{ define "end"}}
