add config page for database configuration adition

--- a/src/web/index.tmpl
+++ b/src/web/index.tmpl
@@ -10,6 +10,9 @@
       <li>
         <a hx-get="/delete-user" hx-target="#main-content" class="cursor-pointer block">Delete User</a>
       </li>
+      <li>
+        <a hx-get="/configuration" hx-target="#main-content" class="cursor-pointer block">Configuration</a>
+      </li>
     </ul>
   </div>
   <div class="grid grid-rows-[70px_auto]">
