--- a/src/web/deleteUser.tmpl
+++ b/src/web/deleteUser.tmpl
@@ -25,8 +25,11 @@
     </div>
     <label for="databases">Select the the following databases: </label>
     <select name="databases" id="databases" multiple>
-      <option value="postgres">postgres</option>
-      <option value="mysql">mysql</option>
+      {{ range .}}
+      <option value="{{ . }}">{{ . }}</option>
+      {{
+        end
+      }}
     </select>
     <button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
   </form>
