add spinner and response place for delete user

--- a/src/web/createUser.tmpl
+++ b/src/web/createUser.tmpl
@@ -4,6 +4,9 @@
     class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
     hx-post="/create-user"
     hx-target="#response"
+    hx-ext="disable-element"
+    hx-disable-element="#button"
+    hx-indicator="#spinner"
   >
     <div class="grid grid-cols-2 gap-y-2">
       <label for="username" class="col-start-1">Username: </label>
@@ -32,7 +35,48 @@
         end
       }}
     </select>
-    <button type="submit" class="bg-blue-400 py-2 px-4 rounded">Submit</button>
+    <button type="submit" class="bg-blue-400 py-2 px-4 rounded" id="button">
+      Submit
+
+      <svg
+        id="spinner"
+        class="my-indicator pl-2"
+        xmlns="http://www.w3.org/2000/svg"
+        width="38"
+        height="38"
+        viewBox="0 0 38 38"
+        stroke="#fff"
+      >
+        <g fill="none" fill-rule="evenodd">
+          <g transform="translate(1 1)" stroke-width="2">
+            <circle stroke-opacity=".5" cx="18" cy="18" r="18" />
+            <path d="M36 18c0-9.94-8.06-18-18-18">
+              <animateTransform
+                attributeName="transform"
+                type="rotate"
+                from="0 18 18"
+                to="360 18 18"
+                dur="1s"
+                repeatCount="indefinite"
+              />
+            </path>
+          </g>
+        </g>
+      </svg>
+    </button>
   </form>
   <div id="response"></div>
 </div>
+<script src="https://unpkg.com/htmx.org/dist/ext/disable-element.js"></script>
+
+<style>
+  .my-indicator {
+    display: none;
+  }
+  .htmx-request .my-indicator {
+    display: inline;
+  }
+  .htmx-request.my-indicator {
+    display: inline;
+  }
+</style>
