--- a/src/views/templates/signIn.tmpl
+++ b/src/views/templates/signIn.tmpl
@@ -1,8 +1,11 @@
 {{define "body"}}
 <div class="w-full h-screen grid justify-center content-center">
   <form
-    action=""
-    method="post"
+    hx-post="/sign-in"
+    hx-target="#response"
+    hx-ext="disable-element"
+    hx-disable-element="#button"
+    hx-indicator=".spinner"
     class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
   >
     <label for="username">Username</label>
@@ -10,7 +13,7 @@
       type="text"
       name="username"
       id="username"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
 
@@ -19,9 +22,63 @@
       type="password"
       name="password"
       id="password"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
+    <button
+      type="submit"
+      class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
+      id="button"
+    >
+      Submit
+
+      <svg
+        class="pl-2"
+        xmlns="http://www.w3.org/2000/svg"
+        width="25"
+        height="25"
+        viewBox="0 0 38 38"
+        stroke="#fff"
+      >
+        <g fill="none" fill-rule="evenodd">
+          <g transform="translate(1 1)" stroke-width="2">
+            <circle stroke-opacity=".5" cx="18" cy="18" r="18" />
+            <path d="M36 18c0-9.94-8.06-18-18-18">
+              <animateTransform
+                attributeName="transform"
+                type="rotate"
+                from="0 18 18"
+                to="360 18 18"
+                dur="1s"
+                repeatCount="indefinite"
+              />
+            </path>
+          </g>
+        </g>
+      </svg>
+    </button>
   </form>
+  <div id="response"></div>
 </div>
+<style>
+  .my-indicator > svg {
+    display: none;
+  }
+
+  .htmx-request .my-indicator {
+    background-color: lightslategray;
+  }
+
+  .htmx-request .my-indicator > svg {
+    display: inline;
+  }
+
+  .htmx-request.my-indicator {
+    background-color: lightslategray;
+  }
+
+  .htmx-request.my-indicator > svg {
+    display: inline;
+  }
+</style>
 {{ end }}
