--- a/src/views/templates/dbUser/createDbUserPage.tmpl
+++ b/src/views/templates/dbUser/createDbUserPage.tmpl
@@ -2,7 +2,7 @@
 <h1 class="text-2xl">Create User</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-post="/create-user"
+  hx-post="/db/create-user"
   hx-target="#response"
   hx-ext="disable-element"
   hx-disable-element="#button"
