--- a/src/views/templates/base-layout.tmpl
+++ b/src/views/templates/base-layout.tmpl
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" /> 
     <title>DB PLatform</title>
   </head>
   <body>
