--- a/src/views/templates/signIn.tmpl
+++ b/src/views/templates/signIn.tmpl
@@ -23,6 +23,7 @@
       name="password"
       id="password"
       class="border border-slate-400 rounded p-2"
+      minlength="8"
       required
     />
     <button
