--- a/src/views/templates/appUser/resetPassword.tmpl
+++ b/src/views/templates/appUser/resetPassword.tmpl
@@ -1,41 +1,44 @@
 {{ define "main"}}
-<h1 class="text-2xl">Create User</h1>
+<h1 class="text-2xl">Update Password</h1>
 <form
-  class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-post="/db/create-user"
+  hx-post="/update-passwd"
   hx-target="#response"
   hx-ext="disable-element"
   hx-disable-element="#button"
   hx-indicator=".spinner"
+  class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
 >
-  <div class="grid grid-cols-2 gap-y-2">
-    <label for="username" class="col-start-1">Username: </label>
-    <input
-      type="text"
-      name="username"
-      id="username"
-      class="border border-slate-400 rounded"
-      required
-    />
+  <label for="password">Current Password</label>
+  <input
+    type="password"
+    name="password"
+    id="password"
+    class="border border-slate-400 rounded p-2"
+    autocomplete="current-password"
+    minlength="8"
+    required
+  />
+  <label for="password">New Password</label>
+  <input
+    type="password"
+    name="password"
+    id="password"
+    class="border border-slate-400 rounded p-2"
+    autocomplete="new-password"
+    minlength="8"
+    required
+  />
+  <label for="password">Re-enter Password</label>
+  <input
+    type="password"
+    name="password"
+    id="password"
+    class="border border-slate-400 rounded p-2"
+    autocomplete="new-password"
+    minlength="8"
+    required
+  />
 
-    <label for="wo" class="col-start-1">WO: </label>
-    <input
-      type="text"
-      name="wo"
-      id="wo"
-      class="border border-slate-400 rounded"
-      pattern="^WO[0-9]{6}$"
-      required
-    />
-  </div>
-  <label for="databases">Select the the following databases: </label>
-  <select name="databases" id="databases" multiple>
-    {{ range .}}
-    <option value="{{.}}">{{ . }}</option>
-    {{
-      end
-    }}
-  </select>
   <button
     type="submit"
     class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
