--- a/src/views/templates/base-layout.tmpl
+++ b/src/views/templates/base-layout.tmpl
@@ -29,7 +29,7 @@
               <a href="/db/delete-user" class="block">Delete Database User</a>
             </li>
             <li>
-              <a href="#" class="block">Reset Password</a>
+              <a href="/reset-password" class="block">Reset Password</a>
             </li>
             <li>
               <a href="/db" class="block">Add New Database Connection</a>
