add settings layout and pages, update some core logic

--- a/src/views/templates/appUser/resetPassword.tmpl
+++ b/src/views/templates/appUser/resetPassword.tmpl
@@ -1,7 +1,7 @@
 {{ define "main"}}
 <h1 class="text-2xl">Update Password</h1>
 <form
-  hx-post="/update-passwd"
+  hx-patch="/user/reset-password"
   hx-target="#response"
   hx-ext="disable-element"
   hx-disable-element="#button"
@@ -21,7 +21,7 @@
   <label for="password">New Password</label>
   <input
     type="password"
-    name="password"
+    name="new-password"
     id="password"
     class="border border-slate-400 rounded p-2"
     autocomplete="new-password"
@@ -31,7 +31,7 @@
   <label for="password">Re-enter Password</label>
   <input
     type="password"
-    name="password"
+    name="re-password"
     id="password"
     class="border border-slate-400 rounded p-2"
     autocomplete="new-password"
