--- a/src/views/templates/settings/layout.tmpl
+++ b/src/views/templates/settings/layout.tmpl
@@ -23,16 +23,10 @@
               <a href="/" class="block">Home</a>
             </li>
             <li>
-              <a href="/db/create-user" class="block">Create Database User</a>
+              <a href="/settings/dbs" class="block">Manage Database Connection</a>
             </li>
             <li>
-              <a href="/db/delete-user" class="block">Delete Database User</a>
-            </li>
-            <li>
-              <a href="/user/reset-password" class="block">Reset Password</a>
-            </li>
-            <li>
-              <a href="/settings/" class="block">Settings</a>
+              <a href="/settings/users" class="block">Manage Application Users</a>
             </li>
           </ul>
         </div>
@@ -45,7 +39,7 @@
           {{ end }}
           <div class="h-full p-4">
             {{ block "main" .}}
-            <h1 class="text-2xl">Sistema de cadastro de usuarios</h1>
+            <h1 class="text-2xl">Sistema de cadastro de usuarios Settings</h1>
             {{ end }}
           </div>
         </div>
