--- a/src/views/templates/base-layout.tmpl
+++ b/src/views/templates/base-layout.tmpl
@@ -34,6 +34,9 @@
             <li>
               <a href="/settings/" class="block">Settings</a>
             </li>
+            <li>
+              <a href="/user/logout" class="block">Logout</a>
+            </li>
           </ul>
         </div>
         {{ end }}
