add htmx source code, and content to settings pages

--- a/src/views/templates/base-layout.tmpl
+++ b/src/views/templates/base-layout.tmpl
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://unpkg.com/htmx.org@1.9.10"
-      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/output.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" /> 
+    <script src="/assets/js/htmx.min.js"></script>
     <title>DB PLatform</title>
   </head>
   <body>
@@ -32,7 +29,7 @@
               <a href="/user/reset-password" class="block">Reset Password</a>
             </li>
             <li>
-              <a href="/settings/" class="block">Settings</a>
+              <a href="/settings/dbs" class="block">Settings</a>
             </li>
             <li>
               <a href="/user/logout" class="block">Logout</a>
