--- a/src/views/templates/settings/addDb.tmpl
+++ b/src/views/templates/settings/addDb.tmpl
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<h1 class="text-2xl">Add Database</h1>
+<h1 class="text-2xl">Add New Database</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
   hx-post="/db"
