--- a/src/views/templates/settings/databases.tmpl
+++ b/src/views/templates/settings/databases.tmpl
@@ -1,35 +1,47 @@
 {{ define "main"}}
-<h1>Manage Databases</h1>
-<a
-  href="/settings/create-db"
-  class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
->
-  Create New Database</a
->
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Host</th>
-      <th>Port</th>
-      <th>Type</th>
-      <th>Ssl Mode</th>
-      <th>Id</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{ range .}}
-    <tr>
-      <td>{{.Name}}</td>
-      <td>{{.Host}}</td>
-      <td>{{.Port}}</td>
-      <td>{{.Type}}</td>
-      <td>{{.SslMode}}</td>
-      <td>{{.Id}}</td>
-    </tr>
-    {{
-      end
-    }}
-  </tbody>
-</table>
+<div class="flex flex-row justify-between p-3">
+  <h1>Manage Databases</h1>
+  <a
+    href="/settings/create-db"
+    class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
+  >
+    Create New Database</a
+  >
+</div>
+<div class="relative overflow-x-auto">
+  <table
+    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+  >
+    <thead
+      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+    >
+      <tr>
+        <th scope="col" class="px-6 py-3">Name</th>
+        <th scope="col" class="px-6 py-3">Host</th>
+        <th scope="col" class="px-6 py-3">Port</th>
+        <th scope="col" class="px-6 py-3">Type</th>
+        <th scope="col" class="px-6 py-3">Ssl Mode</th>
+        <th scope="col" class="px-6 py-3">Id</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{ range .}}
+      <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+        <td
+          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+        >
+          {{.Name}}
+        </td>
+        <td class="px-6 py-4">{{.Host}}</td>
+        <td class="px-6 py-4">{{.Port}}</td>
+        <td class="px-6 py-4">{{.Type}}</td>
+        <td class="px-6 py-4">{{.SslMode}}</td>
+        <td class="px-6 py-4">{{.Id}}</td>
+      </tr>
+      {{
+        end
+      }}
+    </tbody>
+  </table>
+</div>
 {{ end }}
