--- a/src/views/templates/settings/sideBar.tmpl
+++ b/src/views/templates/settings/sideBar.tmpl
@@ -1,11 +1,11 @@
 {{ define "sideBar" }}
-<div class="border-gray-600 border-r-2">
+<div class="border-gray-600 border-r-2" hx-boost="true">
   <ul class="p-5 grid gap-3">
     <li>
       <a href="/" class="block">Home</a>
     </li>
     <li>
-      <a href="/settings/dbs" class="block">Manage Database Connection</a>
+      <a href="/settings/dbs" class="block">Manage Database Connections</a>
     </li>
     <li>
       <a href="/settings/users" class="block">Manage Application Users</a>
