--- a/src/views/templates/settings/users.tmpl
+++ b/src/views/templates/settings/users.tmpl
@@ -1,32 +1,60 @@
 {{ define "main"}}
-<h1>Manage User</h1>
-<a
-  href="/settings/create-user"
-  class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
-  >Create New User</a
->
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Supervisor</th>
-      <th>Sector</th>
-      <th>Admin</th>
-      <th>Id</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{ range .}}
-    <tr>
-      <td>{{.Username}}</td>
-      <td>{{.Supervisor}}</td>
-      <td>{{.Sector}}</td>
-      <td>{{.IsAdmin}}</td>
-      <td>{{.Id}}</td>
-    </tr>
-    {{
-      end
-    }}
-  </tbody>
-</table>
+<div class="flex flex-row justify-between p-3">
+  <h1>Manage User</h1>
+  <a
+    href="/settings/create-user"
+    class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
+    >Create New User</a
+  >
+</div>
+<div class="relative overflow-x-auto">
+  <table
+    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+  >
+    <thead
+      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+    >
+      <tr>
+        <th scope="col" class="px-6 py-3">Username</th>
+        <th scope="col" class="px-6 py-3">Supervisor</th>
+        <th scope="col" class="px-6 py-3">Sector</th>
+        <th scope="col" class="px-6 py-3">Admin</th>
+        <th scope="col" class="px-6 py-3">Id</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{ range .}}
+      <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+        <td
+          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+        >
+          {{.Username}}
+        </td>
+        <td class="px-6 py-4">{{.Supervisor}}</td>
+        <td class="px-6 py-4">{{.Sector}}</td>
+        <td class="px-6 py-4">
+          <input
+            type="checkbox"
+            name="IsAdmin"
+            id="IsAdmin"
+            {{
+            if
+            .IsAdmin
+            }}
+            checked
+            aria-checked="true"
+            {{
+            end}}
+            disabled
+          />
+        </td>
+        <td class="px-6 py-4">{{.Id}}</td>
+      </tr>
+      {{
+        end
+      }}
+    </tbody>
+  </table>
+</div>
+
 {{ end }}
