add reset password functionality

--- a/src/views/templates/appUser/resetPassword.tmpl
+++ b/src/views/templates/appUser/resetPassword.tmpl
@@ -15,7 +15,7 @@
     id="password"
     class="border border-slate-400 rounded p-2"
     autocomplete="current-password"
-    minlength="8"
+    minlength="4"
     required
   />
   <label for="password">New Password</label>
@@ -32,7 +32,7 @@
   <input
     type="password"
     name="re-password"
-    id="password"
+    id="re-password"
     class="border border-slate-400 rounded p-2"
     autocomplete="new-password"
     minlength="8"
