add addDb and AddAppUser functionality

--- a/src/views/templates/settings/addDb.tmpl
+++ b/src/views/templates/settings/addDb.tmpl
@@ -2,7 +2,7 @@
 <h1 class="text-2xl">Add New Database</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-post="/db"
+  hx-post="/settings/create-db"
   hx-target="#response"
 >
   <div class="grid grid-cols-2 gap-y-2">
