--- a/src/views/templates/settings/addAppUser.tmpl
+++ b/src/views/templates/settings/addAppUser.tmpl
@@ -2,7 +2,7 @@
 <h1 class="text-2xl">Add New Database</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-post="/db"
+  hx-post="/settings/create-user"
   hx-target="#response"
 >
   <div class="grid grid-cols-2 gap-y-2">
@@ -58,7 +58,6 @@
       name="admin"
       id="admin"
       class="border border-slate-400 rounded"
-      required
     />
   </div>
 
