add edit and delete functionality for app user and databases

--- a/src/server/assets/css/styles.css
+++ b/src/server/assets/css/styles.css
@@ -21,3 +21,8 @@
 .htmx-request.my-indicator > svg {
   display: inline;
 }
+
+tr.htmx-swapping td {
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
