--- a/src/views/templates/settings/users.tmpl
+++ b/src/views/templates/settings/users.tmpl
@@ -19,10 +19,15 @@
         <th scope="col" class="px-6 py-3">Supervisor</th>
         <th scope="col" class="px-6 py-3">Sector</th>
         <th scope="col" class="px-6 py-3">Admin</th>
-        <th scope="col" class="px-6 py-3">Id</th>
+        <th scope="col" class="px-6 py-3"></th>
+        <th scope="col" class="px-6 py-3"></th>
       </tr>
     </thead>
-    <tbody>
+    <tbody
+      hx-confirm="Are you sure?"
+      hx-target="closest tr"
+      hx-swap="outerHTML swap:1s"
+    >
       {{ range .}}
       <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
         <td
@@ -48,7 +53,21 @@
             disabled
           />
         </td>
-        <td class="px-6 py-4">{{.Id}}</td>
+        <td class="px-6 py-4">
+          <a
+            class="border rounded py-2 px-4"
+            href="/settings/update-user/{{.Id}}"
+            >Edit</a
+          >
+        </td>
+        <td>
+          <button
+            class="bg-red-400 text-white py-2 px-4 rounded"
+            hx-delete="/settings/user/{{.Id}}"
+          >
+            Delete
+          </button>
+        </td>
       </tr>
       {{
         end
