add log func and refactor delete db and user func

--- a/src/views/templates/settings/sideBar.tmpl
+++ b/src/views/templates/settings/sideBar.tmpl
@@ -10,6 +10,7 @@
     <li>
       <a href="/settings/users" class="block">Manage Application Users</a>
     </li>
+    <li><a href="/settings/logs" class="block">Logs</a></li>
   </ul>
 </div>
 {{ end }}
