add padding to forms and logs functionality and page

--- a/src/views/templates/dbUser/createDbUser.tmpl
+++ b/src/views/templates/dbUser/createDbUser.tmpl
@@ -14,7 +14,7 @@
       type="text"
       name="username"
       id="username"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
 
@@ -23,7 +23,7 @@
       type="text"
       name="wo"
       id="wo"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       pattern="^WO[0-9]{6}$"
       required
     />
