--- a/src/views/templates/dbUser/deleteDbUser.tmpl
+++ b/src/views/templates/dbUser/deleteDbUser.tmpl
@@ -11,7 +11,7 @@
       type="text"
       name="username"
       id="username"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
 
@@ -20,7 +20,7 @@
       type="text"
       name="wo"
       id="wo"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
   </div>
