--- a/src/views/templates/settings/addAppUser.tmpl
+++ b/src/views/templates/settings/addAppUser.tmpl
@@ -57,7 +57,7 @@
       type="checkbox"
       name="admin"
       id="admin"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
     />
   </div>
 
