--- a/src/views/templates/settings/addDb.tmpl
+++ b/src/views/templates/settings/addDb.tmpl
@@ -11,7 +11,7 @@
       type="text"
       name="name"
       id="name"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
 
@@ -20,7 +20,7 @@
       type="text"
       name="host"
       id="host"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
     <label for="port" class="col-start-1">Port: </label>
@@ -28,7 +28,7 @@
       type="number"
       name="port"
       id="port"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
     />
     <label for="type">Type: </label>
