--- a/src/views/templates/settings/editDb.tmpl
+++ b/src/views/templates/settings/editDb.tmpl
@@ -11,7 +11,7 @@
       type="text"
       name="name"
       id="name"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
       value="{{.Name}}"
     />
@@ -21,7 +21,7 @@
       type="text"
       name="host"
       id="host"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
       value="{{.Host}}"
     />
@@ -30,7 +30,7 @@
       type="number"
       name="port"
       id="port"
-      class="border border-slate-400 rounded"
+      class="border border-slate-400 rounded p-2"
       required
       value="{{.Port}}"
     />
