add functionality to update db config info

--- a/src/views/templates/settings/editAppUser.tmpl
+++ b/src/views/templates/settings/editAppUser.tmpl
@@ -16,7 +16,7 @@
       value="{{.Username}}"
     />
 
-    <label for="password">Password:</label>
+    <!-- <label for="password">Password:</label>
     <input
       type="password"
       name="password"
@@ -35,7 +35,7 @@
       autocomplete="new-password"
       minlength="8"
       required
-    />
+    /> -->
 
     <label for="supervisor" class="col-start-1">Supervisor: </label>
     <input
