--- a/src/views/templates/settings/editDb.tmpl
+++ b/src/views/templates/settings/editDb.tmpl
@@ -2,7 +2,7 @@
 <h1 class="text-2xl">Edit Database</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-put="/settings/edit-db/"
+  hx-put="/settings/update-db/{{.Id}}"
   hx-target="#response"
 >
   <div class="grid grid-cols-2 gap-y-2">
