--- a/src/views/templates/settings/addDb.tmpl
+++ b/src/views/templates/settings/addDb.tmpl
@@ -34,7 +34,8 @@
     <label for="type">Type: </label>
     <select name="type" id="type">
       <option value="postgres">postgres</option>
-      <option value="mysql">mysql</option>
+      <option value="mysql">mysql/maria</option>
+      <option value="oracle">oracle</option>
     </select>
     <label for="sslMode">SSL Mode: </label>
     <select name="sslMode" id="sslMode">
