--- a/src/views/templates/settings/editDb.tmpl
+++ b/src/views/templates/settings/editDb.tmpl
@@ -38,7 +38,8 @@
     <select name="type" id="type">
       <option value="{{.Type}}" selected disabled hidden>{{.Type}}</option>
       <option value="postgres">postgres</option>
-      <option value="mysql">mysql</option>
+      <option value="mysql">mysql/maria</option>
+      <option value="oracle">oracle</option>
     </select>
     <label for="sslMode">SSL Mode: </label>
     <select name="sslMode" id="sslMode">
