--- a/src/views/templates/base-layout.tmpl
+++ b/src/views/templates/base-layout.tmpl
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/output.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="/assets/js/htmx.min.js"></script>
     <title>DB PLatform</title>
   </head>
@@ -13,9 +12,13 @@
     {{ block "body" . }}
     {{ block "navbar" .}}
     <nav class="bg-slate-300">
-      <ul class="flex justify-between p-6">
-        <li>Logo</li>
-        <a href="/settings/dbs" class="block">Settings</a>
+      <ul class="flex justify-between items-center p-6">
+        <li>
+          <img src="/assets/img/logo.png" alt="logo" class="max-w-36" />
+        </li>
+        <li>
+          <a href="/settings/dbs" class="block">Settings</a>
+        </li>
       </ul>
     </nav>
     {{ end }}
