add more functionality

--- a/src/views/templates/settings/logs.tmpl
+++ b/src/views/templates/settings/logs.tmpl
@@ -14,6 +14,7 @@
           <th scope="col" class="px-6 py-3">WO</th>
           <th scope="col" class="px-6 py-3">Created By</th>
           <th scope="col" class="px-6 py-3">Created At</th>
+          <th scope="col" class="px-6 py-3">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -32,6 +33,7 @@
           <td class="px-6 py-4">
             {{.CreatedAt}}
           </td>
+          <td class="px-6 py-4">{{.Action}}</td>
         </tr>
         {{
           end
