--- a/api/public/css/styles.css
+++ b/api/public/css/styles.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -211,6 +211,8 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
+  letter-spacing: inherit;
+  /* 1 */
   color: inherit;
   /* 1 */
   margin: 0;
@@ -234,9 +236,9 @@ select {
 */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+input:where([type='button']),
+input:where([type='reset']),
+input:where([type='submit']) {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -492,6 +494,10 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
 ::backdrop {
@@ -542,6 +548,34 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
+}
+
+.my-indicator > svg {
+  display: none;
+}
+
+.htmx-request .my-indicator {
+  background-color: lightslategray;
+}
+
+.htmx-request .my-indicator > svg {
+  display: inline;
+}
+
+.htmx-request.my-indicator {
+  background-color: lightslategray;
+}
+
+.htmx-request.my-indicator > svg {
+  display: inline;
+}
+
+.static {
+  position: static;
 }
 
 .relative {
@@ -823,31 +857,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.my-indicator > svg {
-  display: none;
-}
-
-.htmx-request .my-indicator {
-  background-color: lightslategray;
-}
-
-.htmx-request .my-indicator > svg {
-  display: inline;
-}
-
-.htmx-request.my-indicator {
-  background-color: lightslategray;
-}
-
-.htmx-request.my-indicator > svg {
-  display: inline;
-}
-
-tr.htmx-swapping td {
-  opacity: 0;
-  transition: opacity 1s ease-out;
 }
 
 .rtl\:text-right:where([dir="rtl"], [dir="rtl"] *) {
