add pages and auth

--- a/old_stuff/src/views/templates/dbUser/deleteDbUser.tmpl
+++ b/old_stuff/src/views/templates/dbUser/deleteDbUser.tmpl
@@ -2,7 +2,7 @@
 <h1 class="text-2xl">Delete User</h1>
 <form
   class="border rounded border-gray-500 p-5 w-fit flex flex-col gap-2"
-  hx-post="/db/delete-user"
+  hx-post="/db/user"
   hx-target="#response"
   hx-ext="disable-element"
   hx-disable-element="#button"
