--- a/views/login/index.templ
+++ b/views/login/index.templ
@@ -14,7 +14,7 @@ templ Index() {
 			<main>
 				<div class="w-full h-screen grid justify-center content-center bg-slate-300">
 					<form
-						hx-post="/sign-in"
+						hx-post="/login"
 						hx-target="#response"
 						hx-ext="disable-element"
 						hx-disable-element="#button"
