--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -37,15 +37,12 @@ templ Base() {
 							<li>
 								<a href="/user/reset-password" class="block">Reset Password</a>
 							</li>
-							<li><a href="/user/logout" class="block">Logout</a></li>
+							<li><a href="/logout" class="block">Logout</a></li>
 						</ul>
 					</div>
 					<div class="grid grid-rows-[70px_auto]">
 						<div class="h-full p-4">
 							{ children... }
-							if ctx.Value("isLoggedIn").(bool) {
-								<div>logged in t</div>
-							}
 						</div>
 					</div>
 				</div>
