--- a/views/components/externalUserForm.templ
+++ b/views/components/externalUserForm.templ
@@ -22,6 +22,25 @@ templ ExternalUserForm(dbs []string, shouldCreate bool) {
 				class="border border-slate-400 rounded p-2"
 				required
 			/>
+			if shouldCreate {
+				<label for="password" class="col-start-1">Password: </label>
+				<div class="relative col-start-2 flex">
+					<input
+						type="password"
+						name="password"
+						id="password"
+						class="border border-slate-400 rounded p-2 flex-grow"
+						required
+					/>
+					<button
+						type="button"
+						class="ml-2 text-sm text-gray-600 hover:text-gray-900"
+						onclick="togglePassword()"
+					>
+						Show
+					</button>
+				</div>
+			}
 			<label for="wo" class="col-start-1">WO: </label>
 			<input
 				type="text"
@@ -79,4 +98,17 @@ templ ExternalUserForm(dbs []string, shouldCreate bool) {
 		</button>
 	</form>
 	<div id="response"></div>
+	<script>
+		function togglePassword() {
+			var passwordInput = document.getElementById('password');
+			var showButton = event.target;
+			if (passwordInput.type === 'password') {
+				passwordInput.type = 'text';
+				showButton.textContent = 'Hide';
+			} else {
+				passwordInput.type = 'password';
+				showButton.textContent = 'Show';
+			}
+		}
+	</script>
 }
