--- a/views/user/reset-password.templ
+++ b/views/user/reset-password.templ
@@ -3,7 +3,7 @@ package user
 import "github.com/ygorcarmo/db-platform/views/layouts"
 
 templ ResetPassword() {
-	@layouts.Base() {
+	@layouts.Home() {
 		<h1 class="text-2xl">Update Password</h1>
 		<form
 			hx-patch="/user/reset-password"
