--- a/views/externalDb/createUser.templ
+++ b/views/externalDb/createUser.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ CreateUserPage(dbs []string) {
-	@layouts.Base() {
+	@layouts.Home() {
 		<h1 class="text-2xl text-green-500">Create User</h1>
 		@components.ExternalUserForm(dbs, true)
 	}
