--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -8,7 +8,7 @@ templ Base(sideBar templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" type="text/css" href="/public/css/styles.css"/>
 			<script src="/public/js/htmx.min.js"></script>
-			<title>DB PLatform</title>
+			<title>DB Platform</title>
 		</head>
 		<body>
 			<nav class="bg-slate-300">
@@ -17,7 +17,22 @@ templ Base(sideBar templ.Component) {
 						<img src="/public/img/logo.png" alt="logo" class="max-w-36"/>
 					</li>
 					<li>
-						<a href="/settings" class="block">Settings</a>
+						<div class="relative inline-block text-left">
+							<button type="button" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="false" aria-haspopup="true">
+								Options
+								<svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+									<path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd"></path>
+								</svg>
+							</button>
+							<!-- Dropdown menu -->
+							<div class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden opacity-0 transform scale-95" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+								<div class="py-1" role="none">
+									<a href="/user/reset-password" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-0">Reset password</a>
+									<a href="/settings" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-1">Admin panel</a>
+									<a href="/logout" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-2">Sign out</a>
+								</div>
+							</div>
+						</div>
 					</li>
 				</ul>
 			</nav>
@@ -35,6 +50,32 @@ templ Base(sideBar templ.Component) {
 					</div>
 				</div>
 				<script src="https://unpkg.com/htmx.org/dist/ext/disable-element.js"></script>
+				<script>
+					document.addEventListener('DOMContentLoaded', function() {
+				    	const menuButton = document.getElementById('menu-button');
+				    	const menu = menuButton.nextElementSibling;
+
+				    	menuButton.addEventListener('click', function() {
+				    	    const isExpanded = menuButton.getAttribute('aria-expanded') === 'true';
+				    	    menuButton.setAttribute('aria-expanded', !isExpanded);
+				    	    menu.classList.toggle('hidden');
+				    	    menu.classList.toggle('opacity-0');
+				    	    menu.classList.toggle('transform');
+				    	    menu.classList.toggle('scale-95');
+				    	});
+
+				    	// Close the menu if clicked outside
+				    	document.addEventListener('click', function(event) {
+				    	    if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
+				    	        menuButton.setAttribute('aria-expanded', 'false');
+				    	        menu.classList.add('hidden');
+				    	        menu.classList.add('opacity-0');
+				    	        menu.classList.add('transform');
+				    	        menu.classList.add('scale-95');
+				    	    }
+				    	});
+					});
+				</script>
 			</main>
 		</body>
 	</html>
