add application creation logic

--- a/views/setting/users.templ
+++ b/views/setting/users.templ
@@ -10,7 +10,7 @@ templ GetUsersPage(users []models.AppUser) {
 		<div class="flex flex-row justify-between p-3">
 			<h1>Manage User</h1>
 			<a
-				href="/settings/create-user"
+				href="/settings/users/create"
 				class="bg-blue-400 py-2 px-4 rounded spinner my-indicator"
 			>Create New User</a>
 		</div>
